# forest-segmentation

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: safety.yaml
data/: region.geojson
notebooks/: 1 - Collection.ipynb  2 - Pre-processing.ipynb
