[tool.poetry]
name = "forest-segmentation"
version = "0.1.0"
description = "Tutorial on remote sensing forest segmentation"
authors = ["Ilan Dubois <ilan.dubois@gmail.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
pandas = "^1.1.3"
sentinelsat = "^0.14"
rasterio = "^1.1.7"
matplotlib = "^3.3.2"
torch = "^1.6.0"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
